# Review_Analysis_Agent

./: .gitignore  LICENSE  README.md  README_EN.md  README_ZH.md  pyproject.toml
src/: config.yaml  main.py
src/agent/: chat_handler.py  review_handler.py
src/api/: deps.py  error_handlers.py  routes_artifacts.py  routes_documents.py  routes_runs.py  routes_sessions.py  run_store.py  session_store.py
src/cli/: app.py  server.py
src/config/: loader.py  paths.py  schema.py
src/models/: chat_model.py  entities.py  enums.py  events.py  manifests.py  provider.py  run.py
src/prompt/: registry.py
src/prompt/templates/: chat.md  prd_review.md  tc_review.md  trd_review.md
src/tools/mcp/: load_mcp_tools.py
src/utils/: aili_doc_parser.py  document_parser.py  file_store.py  storage_paths.py
tests/contract/: test_artifacts_api.py  test_documents_api.py
tests/unit/: test_aili_doc_parser.py  test_aili_doc_parser_exports.py  test_chat_service.py  test_config_loader.py  test_document_parser.py  test_file_store.py  test_mcp_tools_binding.py  test_prompt_registry.py  test_review_service.py
